--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,6 @@ Temporary Items
 ### macOS Patch ###
 # iCloud generated files
 *.icloud
+
+.*  # ignore ipynb checkpoints
+**/*.ipynb_checkpoints/
