--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@ Temporary Items
 .*  # ignore ipynb checkpoints
 **/*.ipynb_checkpoints/*
 .ipynb_checkpoints
+
+.*  # ignore all hidden files and folders
+!/.gitignore  # explicitly do not ignore .gitignore
