--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ Temporary Items
 
 .*  # ignore all hidden files and folders
 !/.gitignore  # explicitly do not ignore .gitignore
+.ipynb_checkpoints/E_commerce_AB_testing_final_pj-checkpoint.ipynb
